--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "formation-vue-node",
-  "version": "3.0.0",
-  "description": "Formation vue.js",
+  "name": "vue-node",
+  "version": "1.0.0",
+  "description": "vue.js",
   "authors": [
-    "MOHAMED BENJELLOUN <mohamed.benjelloun@atos.net>",
-    "QUENTIN TOMASICCHIO <quentin.tomasicchio@worldline.com>",
-    "SYLVAIN POLLET-VILLARD <sylvain.polletvillard@worldline.com>"
+    "Anbu Sundaram <anbu.mca23@gmail.com>"
   ],
   "private": true,
   "scripts": {
